<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.fragment.LocationDetailFragment">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:letterSpacing="0.01"
        android:text="@string/poi_details"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/action_bar"
        app:layout_constraintStart_toEndOf="@+id/imageView44"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView79"
        app:layout_constraintStart_toStartOf="@+id/action_bar"
        app:layout_constraintTop_toTopOf="@+id/textView79"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar">


        <TextView
            android:id="@+id/tv_poi_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/poi_title"/>


        <TextView
            android:id="@+id/tv_poi_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/poi_description"/>


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </HorizontalScrollView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textColor="@color/purple_200"
            android:text="@string/wikipedia"
            />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_go_to_route"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:weightSum="3">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="serif"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/get_there"/>

                <ImageView
                    android:id="@+id/btn_get_there"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/baseline_near_me_24"
                    android:tint="@android:color/holo_blue_light"
                    />


            </LinearLayout>



        </androidx.cardview.widget.CardView>





    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>